sort of fix scrollbars on safari ios

--- a/src/App.scss
+++ b/src/App.scss
@@ -117,8 +117,14 @@ body {
   background: var(--Neutral-5);
   color: var(--gray-300);
   display: flex;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
 
   a,
   a:visited,
